--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="placeholder ph9"></div>
                 </div>
             </div>
+            <h3 id="whose-turn"></h3>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
